[tool.poetry]
name = "tiny-audio"
version = "0.1.0"
description = ""
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
packages = [
    { include = "tiny_audio" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
h5py = "^3.10.0"
keras = "^3.0.4"
pydantic = "^2.6.1"
requests = "^2.31.0"
tqdm = "^4.66.4"


[tool.poetry.group.ci.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
